--- a/FedDrMundo/FedDrMundo.csproj
+++ b/FedDrMundo/FedDrMundo.csproj
@@ -37,15 +37,15 @@
   <ItemGroup>
     <Reference Include="LeagueSharp, Version=1.0.0.25, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Fernando\Desktop\Binaries\Repositories\1BA0420E\trunk\Syndra\bin\Release\LeagueSharp.dll</HintPath>
+      <HintPath>..\..\..\zlsharp\Assemblies\System\LeagueSharp.dll</HintPath>
     </Reference>
-    <Reference Include="LeagueSharp.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="LeagueSharp.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Fernando\Desktop\Binaries\Repositories\1BA0420E\trunk\Syndra\bin\Release\LeagueSharp.Common.dll</HintPath>
+      <HintPath>..\..\..\zlsharp\Assemblies\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Fernando\Desktop\Binaries\Repositories\1BA0420E\trunk\Syndra\bin\Release\SharpDX.dll</HintPath>
+      <HintPath>..\..\..\zlsharp\Assemblies\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
