--- a/FedJax/FedJax.csproj
+++ b/FedJax/FedJax.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper.cs" />
     <Compile Include="Jumper.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Polygon.cs" />
